cppcheck_report.txt
tests/test_vector.cpp:11:20: error: The code contains unhandled character(s) (character code=230). Neither unicode nor extended ascii is supported. [syntaxError]
TEST_F(vectorTest, 测试默认构造)
                   ^
nofile:0:0: information: Unmatched suppression: missingInclude [unmatchedSuppression]

nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

